<resources>
    <string name="app_name">MIBET - SIÊU PHẨM NHÀ CÁI - VIP2021</string>


    <string name="hometitle">MiBET có gì hấp dẫn</string>

    <string name="text1">Giao diện đẹp mắt \n\n
 \t MiBET sở hữu một giao diện không quá cầu kỳ nhưng vô cùng bắt mắt và chuyên nghiệp. Từng chức năng, hình ảnh được sắp xếp hợp lý đẹp mắt. Các thông tin được thể hiện rõ ràng giúp người chơi có thể dễ dàng tìm hiểu. Các sản phẩm trò chơi được phân loại và sắp xếp rõ ràng dễ tìm kiếm. Người chơi khi lần đầu đến với nhà cái cũng có thể dễ dàng thao tác và trải nghiệm.</string>
    <string name="text2">Dịch vụ chăm sóc khách hàng \n\n
\t Nhiều người chơi khi đến với MiBET không chỉ được trải nghiệm một thiên đường với các trò chơi giải trí cực hấp dẫn mà còn rất hài lòng với cách phục vụ khách hàng từ nhà cái này. MiBET cung cấp cho người chơi một khung chat nhỏ, người chơi khi gặp khó khăn chỉ cần chat vào khung chat. Hệ thống sẽ nhanh chóng tiếp nhận khó khăn và tư vấn giải quyết vấn đề một cách nhanh chóng và chuyên nghiệp.</string>
    <string name="text3">Nhiều chương trình khuyến mãi \n\n
\t Ngoài được vui chơi, thư giãn với các trò chơi đặc sắc trên nhà cái này, người chơi còn có cơ hội nhận về cho mình nhiều phần quà và các chương trình ưu đãi vô cùng hấp dẫn như hoàn trả x5x6, nhiều chương trình tri ân được diễn ra mỗi ngày… giúp người chơi cảm thấy thích thú và có nhiều cơ hội nhận về cho mình nhiều phần thưởng vô cùng hấp dẫn. Với mong muốn không chỉ là nhà cung cấp dịch vụ mà còn là đơn vị có thể đồng hành cùng người chơi, MiBet áp dụng chính sách hoa hồng xuyên suốt, kéo dài trong quá trình cá cược. Chỉ cần có tham gia cược thể thao, bạn sẽ được nhận Hoa hồng không giới hạn.</string>
    <string name="text4">Kho trò chơi giải trí phong phú \n\n
\t Đến với MiBET, bạn sẽ choáng ngợp trước kho tàn trò chơi vô cùng phong phú mà nhà cái này đang sở hữu. Đem đến nhiều thể loại và hình thức chơi đa dạng khác nhau. Người chơi khi đến với MiBET còn được trải nghiệm các trò chơi đang rất phổ biến và thịnh hành trên thị trường hiện nay như thể thao, bắn cá, đua ngựa ảo, sicbo, slots… và vẫn còn rất nhiều trò chơi hấp dẫn khác. Đảm bảo người chơi sẽ có những khoản thời gian giải trí vô cùng lý tưởng và thư giãn.</string>

</resources>