<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.HomeView"
    android:layout_marginBottom="56dp"
    android:background="#20232a">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="fitXY"
        android:src="@drawable/banner1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hometitle"
        android:layout_gravity="center"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="#ffffff"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        app:cardBackgroundColor="#CC990011"
        app:cardElevation="5dp"
        app:cardCornerRadius="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="#FCF6F5FF"
                android:gravity="left"
                android:textStyle="bold"
                android:layout_margin="7dp"
                android:text="@string/text1"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="fitXY"
        android:src="@drawable/image1"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        app:cardBackgroundColor="#CC990011"
        app:cardElevation="5dp"
        app:cardCornerRadius="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:textColor="#FCF6F5FF"
                android:gravity="left"
                android:layout_margin="7dp"
                android:textStyle="bold"
                android:text="@string/text2"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        app:cardBackgroundColor="#CC990011"
        app:cardElevation="5dp"
        app:cardCornerRadius="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_margin="7dp"
                android:textColor="#FCF6F5FF"
                android:gravity="left"
                android:textStyle="bold"
                android:text="@string/text3"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        app:cardBackgroundColor="#CC990011"
        app:cardElevation="5dp"
        app:cardCornerRadius="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:textColor="#FCF6F5FF"
                android:layout_margin="7dp"
                android:gravity="left"
                android:textStyle="bold"
                android:text="@string/text4"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="fitXY"
        android:src="@drawable/image2"
        android:layout_marginBottom="10dp"/>
</LinearLayout>
    </ScrollView>
</RelativeLayout>